# 101-py

./: .project  .pydevproject  README.md  com.softalks.numbers.launch  pyproject.toml
src/: script.py
