[project]
name = "com.softalks.numbers"
description = "Writes all the natural numbers to console"
version = "0.0.1"
authors = [
  {name = "Santiago Ruiz", email= "hiebra@hotmail.com"}
]
dependencies = [
    "com.softalks.sh @ https://github.com/hiebra/sh-py/archive/refs/tags/v0.0.1.zip"
]
[tool.setuptools.packages.find]
where = ["runnable"]